Client review Section alignment corrected

--- a/src/Views/StaticSite/Views/Courses/Views/Nutridiet.scss
+++ b/src/Views/StaticSite/Views/Courses/Views/Nutridiet.scss
@@ -2933,7 +2933,7 @@
   .slider-track {
     display: flex;
     justify-content: center;
-    align-items: center;
+    // align-items: center;
     // width: 100%;
     height: 300px;
     position: relative;
@@ -2944,8 +2944,8 @@
 
   .slide {
     position: absolute;
-    width: 260px;
-    height: 220px;
+    // width: 260px;
+    // height: 220px;
     transition: all 0.5s ease;
     opacity: 0.5;
   }
@@ -2953,7 +2953,7 @@
   .slide.active {
     transform: translateX(0);
     z-index: 10;
-    width: 340px;
+    // width: 340px;
     height: 270px;
     opacity: 1;
   }
